@@ -1924,43 +1924,6 @@ sub x_probe_save
 }
 
 # Internal
-sub x_probe_run_old
-{
-  my $cfg_file = shift;
-  my $modes = shift;
-
-  return unless $cfg_file;
-
-  my $list = {};
-  
-  my $command = &xst_file_locate_tool ("XFree86");
-  foreach my $depth (@x_colordepths) {
-    open (FD, "$command :9 -xf86config $cfg_file -probeonly -depth $depth -screen XstTestScreen -logfile log 2>&1 |");
-    if (FD) {
-      my @content = (<FD>);
-      close (FD);
-
-      my @lines = grep (/^\(\*\*\) \w+\(0\): Mode \"/, @content);      
-
-      foreach (@{$modes->{'ModeLine'}}) {
-        my $mode = $_;
-
-        foreach (@lines) {
-          my $modename = $1 if /\"(.+)\"/;
-
-          if ($modename eq $mode->{'name'}) {
-            push @{$list->{$depth}}, $mode;
-            last;
-          }
-        }
-      }
-    }
-  }
-
-  return $list;
-}
-
-# Internal
 sub x_probe_scan
 {
   my $cfg_file = shift;
@@ -1972,7 +1935,8 @@ sub x_probe_scan
     my @content = (<FD>);
     close (FD);
     my @list = grep (/^\(\*\*\) \w+\(0\): Mode \"/, @content);
-    return join ("\n", @list);
+#    return join ("\n", @list);
+    return \@list;
   }
 
   return;
@@ -2025,7 +1989,7 @@ sub x_probe_run
   my $hash;
   foreach my $depth (@x_colordepths) {
     my $proc = &xst_process_fork (\&x_probe_scan, $cfg_file, $depth);
-    &xst_process_list_check_ready (15, [$proc]);
+    &xst_process_list_check_ready (15, $proc);
     my $list = &x_probe_collect ($proc, $modes, $depth);
     if (scalar @$list) {
       $hash->{$depth} = $list;
